# pitty

./: .gitignore  .gitleaks.toml  .pinact.yaml  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  README.md  SCHEMA.md  action.yml  flake.nix  justfile  lefthook.yml  socket.yml
.github/workflows/: ci.yml  release.yml  socket.yml
assets/: pitty.yaml  ptytest.yaml
assets/scenarios/: hello.yaml
docs/: development.md
e2e/: README.md
e2e/scenarios/meta/: verify-empty-spawn-errors.yaml  verify-secret-masked.yaml  verify-timeout-fails.yaml
e2e/scenarios/meta/inner/: empty-spawn.yaml  secret-leak.yaml  timeout-fail.yaml
e2e/scenarios/positive/: echo-flow.yaml  exit-zero.yaml  expect-json.yaml  expect-not.yaml  expect-semantic.yaml  long-output.yaml  regex-key.yaml
e2e/scenarios/samples/: bench-shell.yaml  matrix-multi-axis.yaml  matrix-shell.yaml
e2e/scenarios/windows/: cmd-echo.yaml
examples/vibe/: README.md
examples/vibe/scenarios/: config.yaml  help.yaml  start-dry-run.yaml  unknown-command.yaml  version.yaml
nix/: package.nix
schema/: pitty-scenario-v1.json
src/: bench.rs  bytes.rs  cli.rs  error.rs  github.rs  lib.rs  main.rs  matrix.rs  report.rs  runner.rs  workspace.rs
src/assert/: file.rs  json.rs  mod.rs  semantic.rs  snapshot.rs
src/config/: duration.rs  mod.rs  step.rs
src/pty/: matcher.rs  mod.rs  reader.rs
tests/: e2e.rs  marketplace_action_contract.rs  release_asset_name_contract.rs  report_json_contract.rs  schema_contract.rs
