[package]
name = "ptytest"
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PTY-based E2E testing framework for CLI apps and AI agents, driven by YAML scenarios"
repository = "https://github.com/kexi/ptytest"
readme = "README.md"
keywords = ["pty", "e2e", "testing", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "ptytest"
path = "src/main.rs"

[lib]
name = "ptytest"
path = "src/lib.rs"

[dependencies]
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tempfile = "3"
# similar is Apache-2.0; compatible with this crate's MIT OR Apache-2.0 license.
similar = "2"

[dev-dependencies]
